test_suite/tests/ui/identifier/not_unit.stderr
error: #[serde(other)] must be on a unit variant
 --> $DIR/not_unit.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

